Fix the confounded gap on the right side on iOS.

--- a/public/css/master.less
+++ b/public/css/master.less
@@ -300,7 +300,9 @@ form {
 	}
 	.dropdown {
 		padding: 0px;
-		.select2-offscreen {
+		&.select2-offscreen {
+			display: block;
+			clear: both;
 			width: 1px !important;
 		}
 	}
